--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  freezed_annotation: ^2.4.1
   plugin_platform_interface: ^2.0.2
   uuid: ^3.0.7
 
@@ -17,6 +18,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  freezed: ^2.4.1
+  build_runner: ^2.4.6
 
 flutter:
   plugin:
