--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tembo_plus.smile_identity_plugin">
+    package="com.smile.smile_identity_plugin">
 
      <uses-permission android:name="android.permission.CAMERA" />
 
