--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  freezed_annotation: ^2.4.1
   plugin_platform_interface: ^2.0.2
-  uuid: ^3.0.7
+
+  uuid:
+  freezed_annotation:
 
 dev_dependencies:
   flutter_test:
